Prevent Safari flickering

--- a/src/app/shared/video-panel/video-panel.component.scss
+++ b/src/app/shared/video-panel/video-panel.component.scss
@@ -12,6 +12,8 @@
 
 .video-panel__overlay {
   @include border-right-radius(10px);
+  // prevents Safari flickering during hover
+  -webkit-transform: translateZ(0);
   background-image: linear-gradient(to right, rgba($shamrock, 0.8), rgba($robin-egg-blue, 0.8));
   height: 100%;
   position: absolute;
@@ -20,6 +22,7 @@
   transition: opacity 100ms;
   width: 100%;
 }
+
 
 .video-panel:hover .video-panel__overlay {
   opacity: 1;
